# substreams-sink-sql

./: .gitignore  .goreleaser.yaml  .sfreleaser  CHANGELOG.md  Dockerfile  README.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum  schema.sql  substreams-sink-sql-v0.0.1.spkg  substreams.yaml
bundler/: bundler.go  bundler_test.go  encoder.go  stats.go
db/: cursor.go  db.go  dialect.go  dialect_clickhouse.go  dialect_postgres.go  dialect_postgres_test.go  dsn.go  dsn_test.go  flush.go  init_test.go  operations.go  operations_test.go  ops.go  ops_test.go  testing.go  types.go  types_enum.go  user.go
devel/: substreams-postgres-sink  substreams-sink-postgres  substreams-sink-sql  up.sh
docs/tutorial/: Cargo.toml  Makefile  README.md  schema.clickhouse.sql  schema.sql  substreams-clickhouse.yaml  substreams.clickhouse.yaml  substreams.yaml
docs/tutorial/proto/: block_meta.proto  eth_block_meta.proto
docs/tutorial/sink/: substreams.dev.yaml
docs/tutorial/src/: block_timestamp.rs  lib.rs
docs/tutorial/src/pb/: eth.block_meta.v1.rs  eth_block_meta.v1.rs  mod.rs  sf.substreams.sink.kv.v1.rs  sf.substreams.sink.types.v1.rs
pb/: generate.sh  last_generate.txt
proto/: buf.gen.yaml  buf.yaml
rollback_sinker/: rollback_sinker.go  rollback_sinker_test.go  rollback_sinker_viper.go  rollback_sinker_viper_test.go
sinker/: bulk_sinker.go  first_load_sinker.go  generate_csv_sinker.go  metrics.go  sinker.go  sinker_test.go  stats.go
state/: file.go  interface.go
syncer/: cache.go  metrics.go  stats.go  syncer.go
tests/: operations_test.go
(+58 files in other folders)
